--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :category_id %><br>
-    <%= f.collection_select :category_id,  Category.all, :categoryname,:categoryname, :include_blank => true %>
+    <%= f.collection_select :category_id,  Category.all, :categoryname,:categoryname  %>
   </div>
   <div class="field">
     <%= f.label :name %><br>
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.collection_select :user_id,  User.all, :id, :username, :include_blank => true %>
+    <%= f.collection_select :user_id,  User.all, :id, :username %>
   </div>
   <div class="actions">
     <%= f.submit %>
