--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,10 +4,10 @@
 
 
 
-<%= form_tag({:action => "search"},{:method => "GET"}) do %>
-  <%= collection_select 'search', 'user', User.all, :id, :username, {selected: @search_user,include_blank: "全員"} %>
-  <%= collection_select 'search', 'category', Category.all, :id, :categoryname, {selected: @search_user,include_blank: "全カテゴリー"} %>
-  <%= text_field_tag "search[name]",@name %>
+<%= form_tag({:action => "search"}) do %>
+  <%= collection_select 'search', 'user', User.all, :username, :username, {selected: @search_user,include_blank: "全員"} %>
+  <%= collection_select 'search', 'category', Category.all, :categoryname, :categoryname, {selected: @search_category,include_blank: "全カテゴリー"} %>
+  <%= text_field_tag "search[name]",@search_value %>
   <%= submit_tag "検索" %>
   <%= link_to "リセット", tasks_path%>
 <% end %>
@@ -30,8 +30,8 @@
       <tr>
         <td><%= task.due_date %></td>
         <td><%= task.category_id %></td>
-        <td><%= task.name %></td>[
-        <td><%= task.dune %></td>i
+        <td><%= task.name %></td>
+        <td><%= task.dune %></td>
         <td><%= task.user_id %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
