--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Category</h1>
+<h1>カテゴリー編集</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to '詳細', @category %> |
+<%= link_to '戻る', categories_path %>
