--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Category</h1>
+<h1>カテゴリー新規作成</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to '戻る', categories_path %>
