--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Categoryname:</strong>
+  <strong>カテゴリー名:</strong>
   <%= @category.categoryname %>
 </p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to '編集', edit_category_path(@category) %> |
+<%= link_to '戻る', categories_path %>
