--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :due_date %><br>
+    <%= f.label :due_date ,"期日" %><br>
     <%= f.date_select :due_date %>
   </div>
   <div class="field">
-    <%= f.label :category_id %><br>
+    <%= f.label :category_id ,"カテゴリーID" %><br>
     <%= f.collection_select :category_id,  Category.all, :categoryname,:categoryname  %>
   </div>
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name ,"名前" %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :dune %><br>
+    <%= f.label :dune ,"できたか" %><br>
     <%= f.check_box :dune %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
+    <%= f.label :user_id ,"ユーザーID" %><br>
     <%= f.collection_select :user_id,  User.all, :username, :username %>
   </div>
   <div class="actions">
