--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Tasks</h1>
+<h1>タスク一覧</h1>
 
 
 
@@ -16,11 +16,11 @@
 <table>
   <thead>
     <tr>
-      <th>Due date</th>
-      <th>Category</th>
-      <th>Name</th>
-      <th>Dune</th>
-      <th>User</th>
+      <th>できたか</th>
+      <th>期日</th>
+      <th>名前</th>
+      <th>カテゴリー</th>
+      <th>ユーザー</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,14 +28,14 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.due_date %></td>
-        <td><%= task.category_id %></td>
-        <td><%= task.name %></td>
         <td><%= task.dune %></td>
+        <td><%= task.due_date %></td>
+        <td><%= task.name %></td>
+        <td><%= task.category_id %></td>
         <td><%= task.user_id %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', task %></td>
+        <td><%= link_to '編集', edit_task_path(task) %></td>
+        <td><%= link_to '削除', task, method: :delete, data: { confirm: '削除していいですか?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -43,4 +43,4 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to '新しいタスク登録', new_task_path %>
