--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing User</h1>
+<h1>ユーザー編集</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to '詳細', @user %> |
+<%= link_to '戻る', users_path %>
