--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>ToDoList</title>
 
 <ul>
+    <%= image_tag "todolist.png" %>
+
 <li><%= link_to "タスク一覧", tasks_path %> | 
     <%= link_to "タスク登録", new_task_path %> | 
     <%= link_to "ユーザー一覧", users_path %> | 
