--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= user.userid %></td>
         <td><%= user.username %></td>
-        <td><%= user.password %></td>
+        <td><% user.password  %>****</td>
         <td><%= link_to '詳細', user %></td>
         <td><%= link_to '変更', edit_user_path(user) %></td>
         <td><%= link_to '削除', user, method: :delete, data: { confirm: '削除していいですか?' } %></td>
