--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+
 <h1>タスク一覧</h1>
 
 
@@ -14,7 +15,7 @@
 <% end %>
 
 
-<table>
+<table border="1" align="left">
   <thead>
     <tr>
       <th>できたか</th>
@@ -43,6 +44,4 @@
 </table>
 
 <br>
-
 <%= link_to '新しいタスク登録', new_task_path %>
-  <%= link_to "リセット", tasks_path%>
