--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.collection_select :category_id,  Category.all, :categoryname,:categoryname  %>
   </div>
   <div class="field">
-    <%= f.label :name ,"名前" %><br>
-    <%= f.text_field :name %>
+    <%= f.label :name ,"名前"  %><br>
+    <%= f.text_field :name , maxlength: 15  %>
   </div>
   <div class="field">
     <%= f.label :dune ,"できたか" %><br>
