--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :name ,"名前" %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name,style: "ime-mode: active;" %>
   </div>
   <div class="field">
     <%= f.label :dune ,"できたか" %><br>
