--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
-<p id="notice"><%= notice %></p>
+﻿<p id="notice"><%= notice %></p>
 
 <h1>ユーザー一覧</h1>
 
-<%= form_tag({:action => "search"}) do %>
-  <%= text_field_tag "search[user.username]",@search_user %>
-  <%= submit_tag "検索" %>
-  <%= link_to "リセット", users_path%>
-<% end %>
+ <%= form_tag({:action=>"search"}) do %>  
+   <%= text_field_tag "search[username]",@word %>    
+   <%= submit_tag "検索" %>    
+   <%= link_to "リセット", users_path %>    
+ <% end %> 
 
 <table>
   <thead>
